# Ultimate-Tic-Tac-Toe

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  board.c  board.h  check_conditions.c  check_conditions.h  main.c  play.c  play.h  program  talking_with_user.c  talking_with_user.h
